<resources>
    <string name="app_name">Zeplin_Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="e_mail1">E-mail</string>
    <string name="password1">Password</string>
    <string name="login">login</string>
    <string name="forgot_password1">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="the_future_of_trading1">The future of trading</string>
    <string name="tradix1">TRADIX</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="sign_up_1">sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_1">Login</string>
    <string name="create_a_free_account">Create a free account</string>
    <string name="the_future_of_trading2">The future of trading</string>
    <string name="tradix2">TRADIX</string>
    <string name="tradix3">TRADIX</string>
    <string name="the_future_of_trading">The future of trading</string>
    <string name="we_have_sent_you_an">We have sent you an</string>
    <string name="email_to_change_your">email to change your</string>
    <string name="password_2">password</string>
    <string name="resend_email">resend email</string>
    <string name="wait_30_seconds_before_sending_it">Wait 30 seconds before sending it</string>
    <string name="tradix">TRADIX</string>
    <string name="yay_your_password_has_been">Yay! Your password has been</string>
    <string name="changed">changed!</string>
    <string name="you_can_now_log_into_your_account">You can now log into your account</string>
    <string name="with_the_new_password">with the new password</string>
    <string name="login3">LOGIN</string>
    <string name="skip4">Skip</string>
    <string name="start_to_invest_text">Start to invest</string>
    <string name="for_your_future">for your future!</string>
    <string name="ex_totam_praesentium_incidunt_aut">Ex totam praesentium incidunt aut.</string>
    <string name="next_text">next</string>
    <string name="text5">Text</string>
    <string name="text6">Text</string>
    <string name="buy_or_sell_for_neo">Buy or Sell for NEO</string>
    <string name="mkt_capitalization">Mkt Capitalization</string>
    <string name="menu">MENU</string>
    <string name="alerts">Alerts</string>
    <string name="select_stocks">Select Stocks</string>
    <string name="tools">Tools</string>
    <string name="market">Market</string>
    <string name="load_more_1">Load More</string>
    <string name="news">NEWS</string>
    <string name="cryptocurrency">CRYPTOCURRENCY</string>
    <string name="what_is_the_future_of">What is the future of</string>
    <string name="cryptocurrencies">cryptocurrencies?</string>
    <string name="editorial_news">EDITORIAL NEWS</string>
    <string name="_02_set_2020">02 Set 2020</string>
    <string name="alt_3_87">ALT -3,87%</string>
    <string name="at">AT</string>
    <string name="illum_velit_nam_voluptatum_enim_aut">Illum velit nam voluptatum enim aut</string>
    <string name="ratione_ratione_officiis_totam">ratione ratione officiis totam.</string>
    <string name="mollitia_eum_sint_tempora_ducimus">Mollitia eum sint tempora ducimus</string>
    <string name="_3_sept_2020">3 Sept 2020</string>
    <string name="rem_deserunt_voluptatem_sapiente_quod_sint_officiis">Rem deserunt voluptatem sapiente. Quod sint officiis</string>
    <string name="load_more">Load More</string>
    <string name="text_text">TEXT_TEXT</string>
    <string name="mary_olson">MARY OLSON</string>
</resources>