<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.FragmentEmail"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/componente_7_3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:text="@string/tradix"
            android:textColor="#2b2828"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            app:layout_constraintLeft_toLeftOf="@id/iv_photo"
            app:layout_constraintRight_toRightOf="@id/iv_photo"
            app:layout_constraintTop_toTopOf="@id/iv_photo" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_coin"
            android:layout_marginTop="5dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_text_1"
            app:layout_constraintLeft_toRightOf="@+id/tv_text_1"
            app:layout_constraintTop_toTopOf="@+id/tv_text_1"
            android:layout_marginStart="9dp" />

        <TextView
            android:id="@+id/tv_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:gravity="center"
            android:text="@string/the_future_of_trading"
            android:textColor="#171717"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/iv_photo"
            app:layout_constraintRight_toRightOf="@id/iv_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_1" />

        <ImageView
            android:id="@+id/iv_letter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:adjustViewBounds="true"
            android:src="@drawable/pixeltrue_newsletter"
            app:layout_constraintTop_toBottomOf="@id/tv_text_2" />

        <TextView
            android:id="@+id/tv_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/we_have_sent_you_an"
            android:textColor="#656565"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_letter" />

        <TextView
            android:id="@+id/tv_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/email_to_change_your"
            android:textColor="#656565"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_3" />

        <TextView
            android:id="@+id/tv_text_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/password_2"
            android:textColor="#656565"
            android:textSize="22sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_4" />

        <TextView
            android:id="@+id/tv_button_resend_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="56dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/email_background_button_resend"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="18dp"
            android:text="@string/resend_email"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_5" />

        <TextView
            android:id="@+id/tv_count_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="87dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/wait_30_seconds_before_sending_it"
            android:textColor="#3e3e3e"
            android:textSize="14sp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_button_resend_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
