<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="69dp"
            android:scaleType="centerInside"
            android:src="@drawable/illustration"
            app:layout_constraintBottom_toTopOf="@+id/tv_text_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:adjustViewBounds="true"
            android:src="@drawable/componente_7_1"
            app:layout_constraintTop_toTopOf="@id/iv_avatar" />

        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:fontFamily="@font/raleway_black"
            android:text="@string/tradix"
            android:textColor="#2b2828"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            app:layout_constraintLeft_toLeftOf="@id/iv_photo"
            app:layout_constraintRight_toRightOf="@id/iv_photo"
            app:layout_constraintTop_toTopOf="@id/iv_photo" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="5dp"
            android:adjustViewBounds="true"
            android:src="@drawable/icon_coin"
            app:layout_constraintBottom_toBottomOf="@id/tv_text_1"
            app:layout_constraintLeft_toRightOf="@+id/tv_text_1"
            app:layout_constraintTop_toTopOf="@+id/tv_text_1" />

        <TextView
            android:id="@+id/tv_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:gravity="center"
            android:text="@string/the_future_of_trading"
            android:textColor="#171717"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@id/iv_photo"
            app:layout_constraintRight_toRightOf="@id/iv_photo"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_1" />

        <TextView
            android:id="@+id/tv_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="71dp"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/welcome"
            android:textColor="#656565"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo"
            app:layout_constraintLeft_toLeftOf="@id/iv_photo"
            app:layout_constraintRight_toRightOf="@id/iv_photo" />

        <EditText
            android:id="@+id/edt_email_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="63dp"
            android:background="@drawable/login_background_edit_text_email"
            android:hint="@string/e_mail"
            android:paddingLeft="23dp"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_3" />

        <EditText
            android:id="@+id/edt_password_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="63dp"
            android:background="@drawable/login_background_edit_text_email"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="23dp"
            android:paddingTop="16dp"
            android:paddingBottom="17dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_email_1" />

        <TextView
            android:id="@+id/tv_button_login_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="23dp"
            android:layout_marginRight="63dp"
            android:background="@drawable/login_background_button_login"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="17dp"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/edt_password_1" />

        <TextView
            android:id="@+id/tv_forgot_password_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="92dp"
            android:fontFamily="@font/lato_light"
            android:text="@string/forgot_password"
            android:textColor="#9d9d9d"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/tv_button_login_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_button_login_1" />

        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/sign_up"
            android:textColor="#9d9d9d"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_forgot_password_1"
            app:layout_constraintRight_toRightOf="@+id/tv_button_login_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_button_login_1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
