<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentConfirmPassword">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/iv_photo_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/componente_6_7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:text="@string/tradix"
            android:textColor="#2b2828"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/iv_photo_1"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@id/iv_photo_1" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="3dp"
            android:layout_marginLeft="3dp"
            android:paddingTop="5dp"
            android:src="@drawable/icon_coin"
            app:layout_constraintBottom_toBottomOf="@+id/tv_text_1"
            app:layout_constraintLeft_toRightOf="@+id/tv_text_1"
            app:layout_constraintTop_toTopOf="@id/tv_text_1" />

        <TextView
            android:id="@+id/tv_text_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/yay_your_password_has_been"
            android:textColor="#656565"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/iv_photo_1" />

        <TextView
            android:id="@id/tv_text_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_black"
            android:gravity="center"
            android:text="@string/changed"
            android:textColor="#656565"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/componente_4_3"
            app:layout_constraintTop_toBottomOf="@+id/iv_flying_coins" />

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/pixeltrue_special_deals"
            app:layout_constraintTop_toBottomOf="@id/tv_text_3" />

        <TextView
            android:id="@id/tv_text_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/lato_light"
            android:gravity="center"
            android:text="@string/you_can_now_log_into_your_account"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="@id/iv_background" />

        <TextView
            android:id="@id/tv_text_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_light"
            android:gravity="center"
            android:text="@string/with_the_new_password"
            android:textColor="#000000"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_text_4" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image_flying_coins"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_text_5" />

        <ImageView
            android:id="@+id/iv_flying_coins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:adjustViewBounds="true"
            android:src="@drawable/image_flying_coins_2"
            app:layout_constraintLeft_toLeftOf="@id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_text_5" />

        <TextView
            android:id="@+id/tv_button_login_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="63dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="63dp"
            android:layout_marginBottom="70dp"
            android:background="@drawable/confirm_password_background_button_login"
            android:fontFamily="@font/lato_black"
            android:gravity="center"
            android:paddingTop="17dp"
            android:paddingBottom="18dp"
            android:text="@string/login3"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_background" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
